--- a/appendix/Results.tex
+++ b/appendix/Results.tex
@@ -494,68 +494,68 @@
   \caption{Green phase vehicle flow (vehicles per green phase) using HBEFA4 emission factors across varying traffic densities.}
   \label{tab:flow_hbefa4}
   \resizebox{\textwidth}{!}{%
-      \begin{tabular}{llrrrrrrrrrrrr}
-        \toprule
-        \textbf{Vehicles} & \textbf{Algorithm} & \textbf{0\%} & \textbf{10\%} & \textbf{20\%} & \textbf{30\%} & \textbf{40\%} & \textbf{50\%} & \textbf{60\%} & \textbf{70\%} & \textbf{80\%} & \textbf{90\%} & \textbf{100\%} \\
-        \midrule
-        69   & Eco-GLOSA (all)                    & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 \\
-        69   & Eco-GLOSA (No GLOSA)               & 1.17 & 1.03 & 0.93 & 0.80 & 0.70 & 0.57 & 0.47 & 0.37 & 0.23 & 0.13 & 0.00 \\
-        69   & Eco-GLOSA (With GLOSA)             & 0.00 & 0.13 & 0.23 & 0.37 & 0.47 & 0.57 & 0.70 & 0.80 & 0.90 & 1.03 & 1.17 \\
-        69   & Baseline (Flow-GLOSA) (all)        & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 \\
-        69   & Baseline (Flow-GLOSA) (No GLOSA)   & 1.17 & 1.03 & 0.93 & 0.80 & 0.70 & 0.57 & 0.47 & 0.37 & 0.23 & 0.13 & 0.00 \\
-        69   & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 0.13 & 0.23 & 0.37 & 0.47 & 0.57 & 0.70 & 0.80 & 0.93 & 1.03 & 1.17 \\
-        \addlinespace
-        138  & Eco-GLOSA (all)                    & 2.30 & 2.30 & 2.30 & 2.27 & 2.27 & 2.27 & 2.27 & 2.30 & 2.30 & 2.27 & 2.27 \\
-        138  & Eco-GLOSA (No GLOSA)               & 2.30 & 2.07 & 1.83 & 1.57 & 1.37 & 1.13 & 0.90 & 0.70 & 0.47 & 0.23 & 0.00 \\
-        138  & Eco-GLOSA (With GLOSA)             & 0.00 & 0.23 & 0.47 & 0.70 & 0.90 & 1.13 & 1.37 & 1.60 & 1.83 & 2.03 & 2.27 \\
-        138  & Baseline (Flow-GLOSA) (all)        & 2.30 & 2.30 & 2.30 & 2.30 & 2.27 & 2.27 & 2.27 & 2.30 & 2.30 & 2.30 & 2.30 \\
-        138  & Baseline (Flow-GLOSA) (No GLOSA)   & 2.30 & 2.07 & 1.83 & 1.60 & 1.37 & 1.13 & 0.90 & 0.70 & 0.47 & 0.23 & 0.00 \\
-        138  & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 0.23 & 0.47 & 0.70 & 0.90 & 1.13 & 1.37 & 1.60 & 1.83 & 2.07 & 2.30 \\
-        \addlinespace
-        346  & Eco-GLOSA (all)                    & 5.73 & 5.70 & 5.77 & 5.73 & 5.73 & 5.77 & 5.73 & 5.73 & 5.73 & 5.70 & 5.73 \\
-        346  & Eco-GLOSA (No GLOSA)               & 5.73 & 5.13 & 4.63 & 4.00 & 3.43 & 2.87 & 2.33 & 1.70 & 1.17 & 0.57 & 0.00 \\
-        346  & Eco-GLOSA (With GLOSA)             & 0.00 & 0.57 & 1.13 & 1.73 & 2.30 & 2.90 & 3.40 & 4.03 & 4.57 & 5.13 & 5.73 \\
-        346  & Baseline (Flow-GLOSA) (all)        & 5.73 & 5.73 & 5.73 & 5.70 & 5.73 & 5.73 & 5.73 & 5.70 & 5.73 & 5.73 & 5.73 \\
-        346  & Baseline (Flow-GLOSA) (No GLOSA)   & 5.73 & 5.17 & 4.60 & 4.00 & 3.43 & 2.87 & 2.33 & 1.70 & 1.17 & 0.57 & 0.00 \\
-        346  & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 0.57 & 1.13 & 1.70 & 2.30 & 2.87 & 3.40 & 4.00 & 4.57 & 5.17 & 5.73 \\
-        \addlinespace
-        692  & Eco-GLOSA (all)                    & 11.57 & 11.60 & 11.57 & 11.57 & 11.60 & 11.57 & 11.57 & 11.57 & 11.57 & 11.53 & 11.63 \\
-        692  & Eco-GLOSA (No GLOSA)               & 11.57 & 10.47 & 9.27 & 8.13 & 6.93 & 5.87 & 4.70 & 3.47 & 2.30 & 1.17 & 0.00 \\
-        692  & Eco-GLOSA (With GLOSA)             & 0.00 & 1.13 & 2.30 & 3.43 & 4.67 & 5.70 & 6.87 & 8.10 & 9.27 & 10.37 & 11.63 \\
-        692  & Baseline (Flow-GLOSA) (all)        & 11.57 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.57 \\
-        692  & Baseline (Flow-GLOSA) (No GLOSA)   & 11.57 & 10.47 & 9.30 & 8.17 & 6.93 & 5.87 & 4.70 & 3.47 & 2.30 & 1.17 & 0.00 \\
-        692  & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 1.13 & 2.30 & 3.43 & 4.67 & 5.73 & 6.90 & 8.13 & 9.30 & 10.43 & 11.57 \\
-        \addlinespace
-        1385 & Eco-GLOSA (all)                    & 23.03 & 22.97 & 23.07 & 22.97 & 23.03 & 23.10 & 23.03 & 23.03 & 22.97 & 23.07 & 23.03 \\
-        1385 & Eco-GLOSA (No GLOSA)               & 23.03 & 20.73 & 18.43 & 16.13 & 13.90 & 11.60 & 9.10 & 6.97 & 4.63 & 2.27 & 0.00 \\
-        1385 & Eco-GLOSA (With GLOSA)             & 0.00 & 2.23 & 4.63 & 6.83 & 9.13 & 11.50 & 13.93 & 16.07 & 18.33 & 20.80 & 23.03 \\
-        1385 & Baseline (Flow-GLOSA) (all)        & 23.03 & 23.13 & 23.10 & 23.07 & 23.03 & 23.10 & 23.03 & 23.07 & 23.10 & 23.13 & 23.03 \\
-        1385 & Baseline (Flow-GLOSA) (No GLOSA)   & 23.03 & 20.87 & 18.47 & 16.17 & 13.93 & 11.60 & 9.10 & 6.93 & 4.63 & 2.27 & 0.00 \\
-        1385 & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 2.27 & 4.63 & 6.90 & 9.10 & 11.50 & 13.93 & 16.13 & 18.47 & 20.87 & 23.03 \\
-        \addlinespace
-        2077 & Eco-GLOSA (all)                    & 34.63 & 34.70 & 34.67 & 34.63 & 34.67 & 34.63 & 34.70 & 34.63 & 34.63 & 34.63 & 34.67 \\
-        2077 & Eco-GLOSA (No GLOSA)               & 34.63 & 31.17 & 27.73 & 24.23 & 20.80 & 17.30 & 13.90 & 10.37 & 6.93 & 3.47 & 0.00 \\
-        2077 & Eco-GLOSA (With GLOSA)             & 0.00 & 3.53 & 6.93 & 10.40 & 13.87 & 17.33 & 20.80 & 24.27 & 27.70 & 31.17 & 34.67 \\
-        2077 & Baseline (Flow-GLOSA) (all)        & 34.63 & 34.60 & 34.63 & 34.63 & 34.57 & 34.57 & 34.57 & 34.63 & 34.63 & 34.60 & 34.63 \\
-        2077 & Baseline (Flow-GLOSA) (No GLOSA)   & 34.63 & 31.10 & 27.70 & 24.23 & 20.77 & 17.30 & 13.80 & 10.40 & 6.93 & 3.50 & 0.00 \\
-        2077 & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 3.50 & 6.93 & 10.40 & 13.80 & 17.27 & 20.77 & 24.23 & 27.70 & 31.10 & 34.63 \\
-        \addlinespace
-        2769 & Eco-GLOSA (all)                    & 46.03 & 46.10 & 46.03 & 41.90 & 42.67 & 46.20 & 39.30 & 46.30 & 46.07 & 46.03 & 46.03 \\
-        2769 & Eco-GLOSA (No GLOSA)               & 46.03 & 41.53 & 36.90 & 29.30 & 25.73 & 23.10 & 15.80 & 13.93 & 9.17 & 4.53 & 0.00 \\
-        2769 & Eco-GLOSA (With GLOSA)             & 0.00 & 4.57 & 9.13 & 12.60 & 16.93 & 23.10 & 23.50 & 32.37 & 36.90 & 41.50 & 46.03 \\
-        2769 & Baseline (Flow-GLOSA) (all)        & 46.03 & 46.17 & 46.13 & 46.10 & 46.13 & 46.03 & 46.13 & 46.10 & 46.13 & 46.17 & 46.03 \\
-        2769 & Baseline (Flow-GLOSA) (No GLOSA)   & 46.03 & 41.60 & 36.93 & 32.27 & 27.77 & 23.10 & 18.37 & 13.87 & 9.20 & 4.57 & 0.00 \\
-        2769 & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 4.57 & 9.20 & 13.83 & 18.37 & 22.93 & 27.77 & 32.23 & 36.93 & 41.60 & 46.03 \\
-        \addlinespace
-        3462 & Eco-GLOSA (all)                    & 49.03 & 46.03 & 44.47 & 42.80 & 42.27 & 41.27 & 39.33 & 39.17 & 38.13 & 38.00 & 37.27 \\
-        3462 & Eco-GLOSA (No GLOSA)               & 49.03 & 41.47 & 35.53 & 30.00 & 25.60 & 20.70 & 15.60 & 12.00 & 7.67 & 3.80 & 0.00 \\
-        3462 & Eco-GLOSA (With GLOSA)             & 0.00 & 4.57 & 8.93 & 12.80 & 16.67 & 20.57 & 23.73 & 27.17 & 30.47 & 34.20 & 37.27 \\
-        3462 & Baseline (Flow-GLOSA) (all)        & 49.03 & 49.07 & 48.83 & 49.53 & 48.97 & 49.23 & 48.97 & 49.53 & 48.83 & 49.07 & 49.03 \\
-        3462 & Baseline (Flow-GLOSA) (No GLOSA)   & 49.03 & 44.10 & 39.13 & 34.57 & 29.53 & 24.63 & 19.50 & 14.97 & 9.70 & 4.97 & 0.00 \\
-        3462 & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 4.97 & 9.70 & 14.97 & 19.43 & 24.60 & 29.47 & 34.57 & 39.13 & 44.10 & 49.03 \\
-        \bottomrule
-      \end{tabular}
-    }
+    \begin{tabular}{llrrrrrrrrrrrr}
+      \toprule
+      \textbf{Vehicles} & \textbf{Algorithm} & \textbf{0\%} & \textbf{10\%} & \textbf{20\%} & \textbf{30\%} & \textbf{40\%} & \textbf{50\%} & \textbf{60\%} & \textbf{70\%} & \textbf{80\%} & \textbf{90\%} & \textbf{100\%} \\
+      \midrule
+      69 & Eco‐GLOSA (all)                     & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 \\
+      69 & Eco‐GLOSA (No GLOSA)                & 1.17 & 1.03 & 0.93 & 0.80 & 0.70 & 0.57 & 0.47 & 0.37 & 0.23 & 0.13 & 0.00 \\
+      69 & Eco‐GLOSA (With GLOSA)              & 0.00 & 0.13 & 0.23 & 0.37 & 0.47 & 0.57 & 0.70 & 0.80 & 0.90 & 1.03 & 1.17 \\
+      69 & Baseline (Flow‐GLOSA) (all)         & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 \\
+      69 & Baseline (Flow‐GLOSA) (No GLOSA)    & 1.17 & 1.03 & 0.93 & 0.80 & 0.70 & 0.57 & 0.47 & 0.37 & 0.23 & 0.13 & 0.00 \\
+      69 & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00 & 0.13 & 0.23 & 0.37 & 0.47 & 0.57 & 0.70 & 0.80 & 0.93 & 1.03 & 1.17 \\
+      \midrule
+      138 & Eco‐GLOSA (all)                   & 2.30 & 2.30 & 2.30 & 2.27 & 2.27 & 2.27 & 2.27 & 2.30 & 2.30 & 2.27 & 2.27 \\
+      138 & Eco‐GLOSA (No GLOSA)              & 2.30 & 2.07 & 1.83 & 1.57 & 1.37 & 1.13 & 0.90 & 0.70 & 0.47 & 0.23 & 0.00 \\
+      138 & Eco‐GLOSA (With GLOSA)            & 0.00 & 0.23 & 0.47 & 0.70 & 0.90 & 1.13 & 1.37 & 1.60 & 1.83 & 2.03 & 2.27 \\
+      138 & Baseline (Flow‐GLOSA) (all)       & 2.30 & 2.30 & 2.30 & 2.30 & 2.27 & 2.27 & 2.27 & 2.30 & 2.30 & 2.30 & 2.27 \\
+      138 & Baseline (Flow‐GLOSA) (No GLOSA)  & 2.30 & 2.07 & 1.83 & 1.60 & 1.37 & 1.13 & 0.90 & 0.70 & 0.47 & 0.23 & 0.00 \\
+      138 & Baseline (Flow‐GLOSA) (With GLOSA)& 0.00 & 0.23 & 0.47 & 0.70 & 0.90 & 1.13 & 1.37 & 1.60 & 1.83 & 2.07 & 2.27 \\
+      \midrule
+      346 & Eco‐GLOSA (all)                   & 5.73 & 5.70 & 5.77 & 5.73 & 5.73 & 5.77 & 5.73 & 5.73 & 5.73 & 5.70 & 5.73 \\
+      346 & Eco‐GLOSA (No GLOSA)              & 5.73 & 5.13 & 4.63 & 4.00 & 3.43 & 2.87 & 2.33 & 1.70 & 1.17 & 0.57 & 0.00 \\
+      346 & Eco‐GLOSA (With GLOSA)            & 0.00 & 0.57 & 1.13 & 1.73 & 2.30 & 2.90 & 3.40 & 4.03 & 4.57 & 5.13 & 5.73 \\
+      346 & Baseline (Flow‐GLOSA) (all)       & 5.73 & 5.73 & 5.77 & 5.70 & 5.73 & 5.73 & 5.77 & 5.70 & 5.73 & 5.70 & 5.73 \\
+      346 & Baseline (Flow‐GLOSA) (No GLOSA)  & 5.73 & 5.17 & 4.63 & 4.00 & 3.43 & 2.87 & 2.33 & 1.70 & 1.13 & 0.57 & 0.00 \\
+      346 & Baseline (Flow‐GLOSA) (With GLOSA)& 0.00 & 0.57 & 1.13 & 1.70 & 2.30 & 2.87 & 3.43 & 4.00 & 4.60 & 5.13 & 5.73 \\
+      \midrule
+      692 & Eco‐GLOSA (all)                   & 11.57 & 11.60 & 11.57 & 11.57 & 11.60 & 11.57 & 11.57 & 11.57 & 11.57 & 11.53 & 11.63 \\
+      692 & Eco‐GLOSA (No GLOSA)              & 11.57 & 10.47 &  9.27 &  8.13 &  6.93 &  5.87 &  4.70 &  3.47 &  2.30 &  1.17 &  0.00 \\
+      692 & Eco‐GLOSA (With GLOSA)            &  0.00 &  1.13 &  2.30 &  3.43 &  4.67 &  5.70 &  6.87 &  8.10 &  9.27 & 10.37 & 11.63 \\
+      692 & Baseline (Flow‐GLOSA) (all)       & 11.57 & 11.57 & 11.60 & 11.57 & 11.50 & 11.60 & 11.60 & 11.53 & 11.53 & 11.57 & 11.57 \\
+      692 & Baseline (Flow‐GLOSA) (No GLOSA)  & 11.57 & 10.43 &  9.30 &  8.13 &  6.87 &  5.83 &  4.70 &  3.47 &  2.30 &  1.17 &  0.00 \\
+      692 & Baseline (Flow‐GLOSA) (With GLOSA)&  0.00 &  1.13 &  2.30 &  3.43 &  4.63 &  5.77 &  6.90 &  8.07 &  9.23 & 10.40 & 11.57 \\
+      \midrule
+      1385 & Eco‐GLOSA (all)                   & 23.03 & 22.97 & 23.07 & 22.97 & 23.03 & 23.10 & 23.03 & 23.03 & 22.97 & 23.07 & 23.03 \\
+      1385 & Eco‐GLOSA (No GLOSA)              & 23.03 & 20.73 & 18.43 & 16.13 & 13.90 & 11.60 &  9.10 &  6.97 &  4.63 &  2.27 &  0.00 \\
+      1385 & Eco‐GLOSA (With GLOSA)            &  0.00 &  2.23 &  4.63 &  6.83 &  9.13 & 11.50 & 13.93 & 16.07 & 18.33 & 20.80 & 23.03 \\
+      1385 & Baseline (Flow‐GLOSA) (all)       & 23.03 & 23.07 & 23.03 & 23.07 & 23.10 & 23.17 & 23.03 & 23.10 & 23.13 & 23.07 & 23.07 \\
+      1385 & Baseline (Flow‐GLOSA) (No GLOSA)  & 23.03 & 20.80 & 18.40 & 16.13 & 13.90 & 11.60 &  9.13 &  6.97 &  4.67 &  2.27 &  0.00 \\
+      1385 & Baseline (Flow‐GLOSA) (With GLOSA)&  0.00 &  2.27 &  4.63 &  6.93 &  9.20 & 11.57 & 13.90 & 16.13 & 18.47 & 20.80 & 23.07 \\
+      \midrule
+      2077 & Eco‐GLOSA (all)                   & 34.63 & 34.70 & 34.67 & 34.63 & 34.67 & 34.63 & 34.70 & 34.63 & 34.63 & 34.63 & 34.67 \\
+      2077 & Eco‐GLOSA (No GLOSA)              & 34.63 & 31.17 & 27.73 & 24.23 & 20.80 & 17.30 & 13.90 & 10.37 &  6.93 &  3.47 &  0.00 \\
+      2077 & Eco‐GLOSA (With GLOSA)            &  0.00 &  3.53 &  6.93 & 10.40 & 13.87 & 17.33 & 20.80 & 24.27 & 27.70 & 31.17 & 34.67 \\
+      2077 & Baseline (Flow‐GLOSA) (all)       & 34.63 & 34.60 & 34.63 & 34.63 & 34.67 & 34.53 & 34.60 & 34.60 & 34.70 & 34.63 & 34.70 \\
+      2077 & Baseline (Flow‐GLOSA) (No GLOSA)  & 34.63 & 31.10 & 27.67 & 24.27 & 20.77 & 17.30 & 13.83 & 10.40 &  7.00 &  3.50 &  0.00 \\
+      2077 & Baseline (Flow‐GLOSA) (With GLOSA)&  0.00 &  3.50 &  6.97 & 10.37 & 13.90 & 17.23 & 20.77 & 24.20 & 27.70 & 31.13 & 34.70 \\
+      \midrule
+      2769 & Eco‐GLOSA (all)                   & 46.03 & 46.10 & 46.03 & 41.90 & 42.67 & 46.20 & 39.30 & 46.30 & 46.07 & 46.03 & 46.03 \\
+      2769 & Eco‐GLOSA (No GLOSA)              & 46.03 & 41.53 & 36.90 & 29.30 & 25.73 & 23.10 & 15.80 & 13.93 &  9.17 &  4.53 &  0.00 \\
+      2769 & Eco‐GLOSA (With GLOSA)            &  0.00 &  4.57 &  9.13 & 12.60 & 16.93 & 23.10 & 23.50 & 32.37 & 36.90 & 41.50 & 46.03 \\
+      2769 & Baseline (Flow‐GLOSA) (all)       & 46.03 & 46.13 & 46.03 & 45.97 & 46.07 & 46.03 & 46.17 & 46.17 & 46.07 & 46.07 & 46.13 \\
+      2769 & Baseline (Flow‐GLOSA) (No GLOSA)  & 46.03 & 41.57 & 36.83 & 32.20 & 27.73 & 23.03 & 18.40 & 13.87 &  9.23 &  4.53 &  0.00 \\
+      2769 & Baseline (Flow‐GLOSA) (With GLOSA)&  0.00 &  4.57 &  9.20 & 13.77 & 18.33 & 23.00 & 27.77 & 32.30 & 36.83 & 41.53 & 46.13 \\
+      \midrule
+      3462 & Eco‐GLOSA (all)                   & 49.03 & 46.03 & 44.47 & 42.80 & 42.27 & 41.27 & 39.33 & 39.17 & 38.13 & 38.00 & 37.27 \\
+      3462 & Eco‐GLOSA (No GLOSA)              & 49.03 & 41.47 & 35.53 & 30.00 & 25.60 & 20.70 & 15.60 & 12.00 &  7.67 &  3.80 &  0.00 \\
+      3462 & Eco‐GLOSA (With GLOSA)            &  0.00 &  4.57 &  8.93 & 12.80 & 16.67 & 20.57 & 23.73 & 27.17 & 30.47 & 34.20 & 37.27 \\
+      3462 & Baseline (Flow‐GLOSA) (all)       & 49.03 & 49.67 & 48.97 & 48.97 & 49.17 & 49.13 & 53.53 & 49.17 & 57.53 & 57.57 & 57.60 \\
+      3462 & Baseline (Flow‐GLOSA) (No GLOSA)  & 49.03 & 44.70 & 39.23 & 34.33 & 29.50 & 24.43 & 21.37 & 14.73 & 11.50 &  5.73 &  0.00 \\
+      3462 & Baseline (Flow‐GLOSA) (With GLOSA)&  0.00 &  4.97 &  9.73 & 14.63 & 19.67 & 24.70 & 32.17 & 34.43 & 46.03 & 51.83 & 57.60 \\
+      \bottomrule
+    \end{tabular}%
+  }
 \end{table}
 
 \begin{table}[ht]
@@ -563,68 +563,68 @@
   \caption{Green phase vehicle flow (vehicles per green phase) using PHEMlight5 emission factors across varying traffic densities.}
   \label{tab:flow_phemlight5}
   \resizebox{\textwidth}{!}{%
-      \begin{tabular}{llrrrrrrrrrrrr}
-        \toprule
-        \textbf{Vehicles} & \textbf{Algorithm} & \textbf{0\%} & \textbf{10\%} & \textbf{20\%} & \textbf{30\%} & \textbf{40\%} & \textbf{50\%} & \textbf{60\%} & \textbf{70\%} & \textbf{80\%} & \textbf{90\%} & \textbf{100\%} \\
-        \midrule
-        69   & Eco-GLOSA (all)                    & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 \\
-        69   & Eco-GLOSA (No GLOSA)               & 1.17 & 1.03 & 0.93 & 0.80 & 0.70 & 0.57 & 0.47 & 0.37 & 0.23 & 0.13 & 0.00 \\
-        69   & Eco-GLOSA (With GLOSA)             & 0.00 & 0.13 & 0.23 & 0.37 & 0.47 & 0.57 & 0.70 & 0.80 & 0.93 & 1.03 & 1.17 \\
-        69   & Baseline (Flow-GLOSA) (all)        & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 \\
-        69   & Baseline (Flow-GLOSA) (No GLOSA)   & 1.17 & 1.03 & 0.93 & 0.80 & 0.70 & 0.57 & 0.47 & 0.37 & 0.23 & 0.13 & 0.00 \\
-        69   & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 0.13 & 0.23 & 0.37 & 0.47 & 0.57 & 0.70 & 0.80 & 0.93 & 1.03 & 1.17 \\
-        \addlinespace
-        138  & Eco-GLOSA (all)                    & 2.30 & 2.30 & 2.30 & 2.27 & 2.27 & 2.27 & 2.27 & 2.30 & 2.30 & 2.30 & 2.27 \\
-        138  & Eco-GLOSA (No GLOSA)               & 2.30 & 2.07 & 1.83 & 1.57 & 1.37 & 1.13 & 0.90 & 0.70 & 0.47 & 0.23 & 0.00 \\
-        138  & Eco-GLOSA (With GLOSA)             & 0.00 & 0.23 & 0.47 & 0.70 & 0.90 & 1.13 & 1.37 & 1.60 & 1.83 & 2.07 & 2.27 \\
-        138  & Baseline (Flow-GLOSA) (all)        & 2.30 & 2.30 & 2.30 & 2.30 & 2.27 & 2.27 & 2.27 & 2.30 & 2.30 & 2.30 & 2.30 \\
-        138  & Baseline (Flow-GLOSA) (No GLOSA)   & 2.30 & 2.07 & 1.83 & 1.60 & 1.37 & 1.13 & 0.90 & 0.70 & 0.47 & 0.23 & 0.00 \\
-        138  & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 0.23 & 0.47 & 0.70 & 0.90 & 1.13 & 1.37 & 1.60 & 1.83 & 2.07 & 2.30 \\
-        \addlinespace
-        346  & Eco-GLOSA (all)                    & 5.73 & 5.73 & 5.73 & 5.70 & 5.77 & 5.73 & 5.73 & 5.70 & 5.73 & 5.73 & 5.73 \\
-        346  & Eco-GLOSA (No GLOSA)               & 5.73 & 5.17 & 4.60 & 4.00 & 3.47 & 2.87 & 2.33 & 1.70 & 1.13 & 0.57 & 0.00 \\
-        346  & Eco-GLOSA (With GLOSA)             & 0.00 & 0.57 & 1.13 & 1.70 & 2.30 & 2.87 & 3.40 & 4.00 & 4.57 & 5.13 & 5.77 \\
-        346  & Baseline (Flow-GLOSA) (all)        & 5.73 & 5.73 & 5.73 & 5.70 & 5.73 & 5.73 & 5.73 & 5.70 & 5.73 & 5.73 & 5.73 \\
-        346  & Baseline (Flow-GLOSA) (No GLOSA)   & 5.73 & 5.17 & 4.60 & 4.00 & 3.43 & 2.87 & 2.33 & 1.70 & 1.17 & 0.57 & 0.00 \\
-        346  & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 0.57 & 1.13 & 1.70 & 2.30 & 2.87 & 3.40 & 4.00 & 4.57 & 5.17 & 5.73 \\
-        \addlinespace
-        692  & Eco-GLOSA (all)                    & 11.57 & 11.57 & 11.53 & 11.53 & 11.57 & 11.57 & 11.60 & 11.57 & 11.50 & 11.53 & 11.63 \\
-        692  & Eco-GLOSA (No GLOSA)               & 11.57 & 10.43 & 9.23 & 8.10 & 6.90 & 5.83 & 4.70 & 3.47 & 2.27 & 1.17 & 0.00 \\
-        692  & Eco-GLOSA (With GLOSA)             & 0.00 & 1.13 & 2.30 & 3.43 & 4.67 & 5.73 & 6.90 & 8.10 & 9.23 & 10.37 & 11.63 \\
-        692  & Baseline (Flow-GLOSA) (all)        & 11.57 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.60 & 11.57 \\
-        692  & Baseline (Flow-GLOSA) (No GLOSA)   & 11.57 & 10.47 & 9.30 & 8.17 & 6.93 & 5.87 & 4.70 & 3.47 & 2.30 & 1.17 & 0.00 \\
-        692  & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 1.13 & 2.30 & 3.43 & 4.67 & 5.73 & 6.90 & 8.13 & 9.30 & 10.43 & 11.57 \\
-        \addlinespace
-        1385 & Eco-GLOSA (all)                    & 23.03 & 23.07 & 23.03 & 23.03 & 23.10 & 23.07 & 23.07 & 22.93 & 22.93 & 23.00 & 23.03 \\
-        1385 & Eco-GLOSA (No GLOSA)               & 23.03 & 20.80 & 18.43 & 16.17 & 13.97 & 11.60 & 9.13 & 6.93 & 4.63 & 2.23 & 0.00 \\
-        1385 & Eco-GLOSA (With GLOSA)             & 0.00 & 2.27 & 4.60 & 6.87 & 9.13 & 11.47 & 13.93 & 16.00 & 18.30 & 20.77 & 23.03 \\
-        1385 & Baseline (Flow-GLOSA) (all)        & 23.03 & 23.13 & 23.10 & 23.07 & 23.03 & 23.10 & 23.03 & 23.07 & 23.10 & 23.13 & 23.03 \\
-        1385 & Baseline (Flow-GLOSA) (No GLOSA)   & 23.03 & 20.87 & 18.47 & 16.17 & 13.93 & 11.60 & 9.10 & 6.93 & 4.63 & 2.27 & 0.00 \\
-        1385 & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 2.27 & 4.63 & 6.90 & 9.10 & 11.50 & 13.93 & 16.13 & 18.47 & 20.87 & 23.03 \\
-        \addlinespace
-        2077 & Eco-GLOSA (all)                    & 34.63 & 34.70 & 34.60 & 34.63 & 34.73 & 34.63 & 34.77 & 34.67 & 34.67 & 34.63 & 34.70 \\
-        2077 & Eco-GLOSA (No GLOSA)               & 34.63 & 31.20 & 27.67 & 24.20 & 20.80 & 17.30 & 13.97 & 10.37 & 6.93 & 3.50 & 0.00 \\
-        2077 & Eco-GLOSA (With GLOSA)             & 0.00 & 3.50 & 6.93 & 10.43 & 13.93 & 17.33 & 20.80 & 24.30 & 27.73 & 31.13 & 34.70 \\
-        2077 & Baseline (Flow-GLOSA) (all)        & 34.63 & 34.60 & 34.63 & 34.63 & 34.57 & 34.57 & 34.57 & 34.63 & 34.63 & 34.60 & 34.63 \\
-        2077 & Baseline (Flow-GLOSA) (No GLOSA)   & 34.63 & 31.10 & 27.70 & 24.23 & 20.77 & 17.30 & 13.80 & 10.40 & 6.93 & 3.50 & 0.00 \\
-        2077 & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 3.50 & 6.93 & 10.40 & 13.80 & 17.27 & 20.77 & 24.23 & 27.70 & 31.10 & 34.63 \\
-        \addlinespace
-        2769 & Eco-GLOSA (all)                    & 46.03 & 44.47 & 41.73 & 39.33 & 38.37 & 37.57 & 37.17 & 36.97 & 36.67 & 35.90 & 37.83 \\
-        2769 & Eco-GLOSA (No GLOSA)               & 46.03 & 40.03 & 33.33 & 27.57 & 23.03 & 18.90 & 14.67 & 11.10 & 7.37 & 3.60 & 0.00 \\
-        2769 & Eco-GLOSA (With GLOSA)             & 0.00 & 4.43 & 8.40 & 11.77 & 15.33 & 18.67 & 22.50 & 25.87 & 29.30 & 32.30 & 37.83 \\
-        2769 & Baseline (Flow-GLOSA) (all)        & 46.03 & 46.17 & 46.13 & 46.10 & 46.13 & 46.03 & 46.13 & 46.10 & 46.13 & 46.17 & 46.03 \\
-        2769 & Baseline (Flow-GLOSA) (No GLOSA)   & 46.03 & 41.60 & 36.93 & 32.27 & 27.77 & 23.10 & 18.37 & 13.87 & 9.20 & 4.57 & 0.00 \\
-        2769 & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 4.57 & 9.20 & 13.83 & 18.37 & 22.93 & 27.77 & 32.23 & 36.93 & 41.60 & 46.03 \\
-        \addlinespace
-        3462 & Eco-GLOSA (all)                    & 49.03 & 44.07 & 41.33 & 39.50 & 38.77 & 37.53 & 37.03 & 36.67 & 36.47 & 36.33 & 36.17 \\
-        3462 & Eco-GLOSA (No GLOSA)               & 49.03 & 39.67 & 33.13 & 27.73 & 23.57 & 18.73 & 14.67 & 10.87 & 7.50 & 3.63 & 0.00 \\
-        3462 & Eco-GLOSA (With GLOSA)             & 0.00 & 4.40 & 8.20 & 11.77 & 15.20 & 18.80 & 22.37 & 25.80 & 28.97 & 32.70 & 36.17 \\
-        3462 & Baseline (Flow-GLOSA) (all)        & 49.03 & 49.07 & 48.83 & 49.53 & 48.97 & 49.23 & 48.97 & 49.53 & 48.83 & 49.07 & 49.03 \\
-        3462 & Baseline (Flow-GLOSA) (No GLOSA)   & 49.03 & 44.10 & 39.13 & 34.57 & 29.53 & 24.63 & 19.50 & 14.97 & 9.70 & 4.97 & 0.00 \\
-        3462 & Baseline (Flow-GLOSA) (With GLOSA) & 0.00 & 4.97 & 9.70 & 14.97 & 19.43 & 24.60 & 29.47 & 34.57 & 39.13 & 44.10 & 49.03 \\
-        \bottomrule
-      \end{tabular}
-    }
+    \begin{tabular}{llrrrrrrrrrrrr}
+      \toprule
+      \textbf{Vehicles} & \textbf{Algorithm}                       & \textbf{0\%} & \textbf{10\%} & \textbf{20\%} & \textbf{30\%} & \textbf{40\%} & \textbf{50\%} & \textbf{60\%} & \textbf{70\%} & \textbf{80\%} & \textbf{90\%} & \textbf{100\%} \\
+      \midrule
+      69   & Eco‐GLOSA (all)                     & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 \\
+      69   & Eco‐GLOSA (No GLOSA)                & 1.17 & 1.03 & 0.93 & 0.80 & 0.70 & 0.57 & 0.47 & 0.37 & 0.23 & 0.13 & 0.00 \\
+      69   & Eco‐GLOSA (With GLOSA)              & 0.00 & 0.13 & 0.23 & 0.37 & 0.47 & 0.57 & 0.70 & 0.80 & 0.93 & 1.03 & 1.17 \\
+      69   & Baseline (Flow‐GLOSA) (all)         & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 & 1.13 & 1.17 & 1.17 & 1.17 & 1.17 & 1.17 \\
+      69   & Baseline (Flow‐GLOSA) (No GLOSA)    & 1.17 & 1.03 & 0.93 & 0.80 & 0.70 & 0.57 & 0.47 & 0.37 & 0.23 & 0.13 & 0.00 \\
+      69   & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00 & 0.13 & 0.23 & 0.37 & 0.47 & 0.57 & 0.70 & 0.80 & 0.93 & 1.03 & 1.17 \\
+      \midrule
+      138  & Eco‐GLOSA (all)                     & 2.30 & 2.30 & 2.30 & 2.27 & 2.27 & 2.27 & 2.27 & 2.30 & 2.30 & 2.30 & 2.27 \\
+      138  & Eco‐GLOSA (No GLOSA)                & 2.30 & 2.07 & 1.83 & 1.57 & 1.37 & 1.13 & 0.90 & 0.70 & 0.47 & 0.23 & 0.00 \\
+      138  & Eco‐GLOSA (With GLOSA)              & 0.00 & 0.23 & 0.47 & 0.70 & 0.90 & 1.13 & 1.37 & 1.60 & 1.83 & 2.07 & 2.27 \\
+      138  & Baseline (Flow‐GLOSA) (all)         & 2.30 & 2.30 & 2.30 & 2.30 & 2.27 & 2.27 & 2.27 & 2.30 & 2.30 & 2.30 & 2.27 \\
+      138  & Baseline (Flow‐GLOSA) (No GLOSA)    & 2.30 & 2.07 & 1.83 & 1.60 & 1.37 & 1.13 & 0.90 & 0.70 & 0.47 & 0.23 & 0.00 \\
+      138  & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00 & 0.23 & 0.47 & 0.70 & 0.90 & 1.13 & 1.37 & 1.60 & 1.83 & 2.07 & 2.27 \\
+      \midrule
+      346  & Eco‐GLOSA (all)                     & 5.73 & 5.73 & 5.73 & 5.70 & 5.77 & 5.73 & 5.73 & 5.70 & 5.70 & 5.70 & 5.77 \\
+      346  & Eco‐GLOSA (No GLOSA)                & 5.73 & 5.17 & 4.60 & 4.00 & 3.47 & 2.87 & 2.33 & 1.70 & 1.13 & 0.57 & 0.00 \\
+      346  & Eco‐GLOSA (With GLOSA)              & 0.00 & 0.57 & 1.13 & 1.70 & 2.30 & 2.87 & 3.40 & 4.00 & 4.57 & 5.13 & 5.77 \\
+      346  & Baseline (Flow‐GLOSA) (all)         & 5.73 & 5.73 & 5.77 & 5.70 & 5.73 & 5.73 & 5.77 & 5.70 & 5.73 & 5.70 & 5.73 \\
+      346  & Baseline (Flow‐GLOSA) (No GLOSA)    & 5.73 & 5.17 & 4.63 & 4.00 & 3.43 & 2.87 & 2.33 & 1.70 & 1.13 & 0.57 & 0.00 \\
+      346  & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00 & 0.57 & 1.13 & 1.70 & 2.30 & 2.87 & 3.43 & 4.00 & 4.60 & 5.13 & 5.73 \\
+      \midrule
+      692  & Eco‐GLOSA (all)                     & 11.57 & 11.57 & 11.53 & 11.53 & 11.57 & 11.57 & 11.60 & 11.57 & 11.50 & 11.53 & 11.63 \\
+      692  & Eco‐GLOSA (No GLOSA)                & 11.57 & 10.43 &  9.23 &  8.10 &  6.90 &  5.83 &  4.70 &  3.47 &  2.27 &  1.17 &  0.00 \\
+      692  & Eco‐GLOSA (With GLOSA)              & 0.00  &  1.13 &  2.30 &  3.43 &  4.67 &  5.73 &  6.90 &  8.10 &  9.23 & 10.37 & 11.63 \\
+      692  & Baseline (Flow‐GLOSA) (all)         & 11.57 & 11.57 & 11.60 & 11.57 & 11.50 & 11.60 & 11.60 & 11.53 & 11.53 & 11.57 & 11.57 \\
+      692  & Baseline (Flow‐GLOSA) (No GLOSA)    & 11.57 & 10.43 &  9.30 &  8.13 &  6.87 &  5.83 &  4.70 &  3.47 &  2.30 &  1.17 &  0.00 \\
+      692  & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00  &  1.13 &  2.30 &  3.43 &  4.63 &  5.77 &  6.90 &  8.07 &  9.23 & 10.40 & 11.57 \\
+      \midrule
+      1385 & Eco‐GLOSA (all)                     & 23.03 & 23.07 & 23.03 & 23.03 & 23.10 & 23.07 & 23.07 & 22.93 & 22.93 & 23.00 & 23.03 \\
+      1385 & Eco‐GLOSA (No GLOSA)                & 23.03 & 20.80 & 18.43 & 16.17 & 13.97 & 11.60 &  9.13 &  6.93 &  4.63 &  2.23 &  0.00 \\
+      1385 & Eco‐GLOSA (With GLOSA)              & 0.00  &  2.27 &  4.60 &  6.87 &  9.13 & 11.47 & 13.93 & 16.00 & 18.30 & 20.77 & 23.03 \\
+      1385 & Baseline (Flow‐GLOSA) (all)         & 23.03 & 23.07 & 23.03 & 23.07 & 23.10 & 23.17 & 23.03 & 23.10 & 23.13 & 23.07 & 23.07 \\
+      1385 & Baseline (Flow‐GLOSA) (No GLOSA)    & 23.03 & 20.80 & 18.40 & 16.13 & 13.90 & 11.60 &  9.13 &  6.97 &  4.67 &  2.27 &  0.00 \\
+      1385 & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00  &  2.27 &  4.63 &  6.93 &  9.20 & 11.57 & 13.90 & 16.13 & 18.47 & 20.80 & 23.07 \\
+      \midrule
+      2077 & Eco‐GLOSA (all)                     & 34.63 & 34.70 & 34.60 & 34.63 & 34.73 & 34.63 & 34.77 & 34.67 & 34.67 & 34.63 & 34.70 \\
+      2077 & Eco‐GLOSA (No GLOSA)                & 34.63 & 31.20 & 27.67 & 24.20 & 20.80 & 17.30 & 13.97 & 10.37 &  6.93 &  3.50 &  0.00 \\
+      2077 & Eco‐GLOSA (With GLOSA)              & 0.00  &  3.50 &  6.93 & 10.43 & 13.93 & 17.33 & 20.80 & 24.30 & 27.73 & 31.13 & 34.70 \\
+      2077 & Baseline (Flow‐GLOSA) (all)         & 34.63 & 34.60 & 34.63 & 34.63 & 34.67 & 34.53 & 34.60 & 34.60 & 34.70 & 34.63 & 34.70 \\
+      2077 & Baseline (Flow‐GLOSA) (No GLOSA)    & 34.63 & 31.10 & 27.67 & 24.27 & 20.77 & 17.30 & 13.83 & 10.40 &  7.00 &  3.50 &  0.00 \\
+      2077 & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00  &  3.50 &  6.97 & 10.37 & 13.90 & 17.23 & 20.77 & 24.20 & 27.70 & 31.13 & 34.70 \\
+      \midrule
+      2769 & Eco‐GLOSA (all)                     & 46.03 & 44.47 & 41.73 & 39.33 & 38.37 & 37.57 & 37.17 & 36.97 & 36.67 & 35.90 & 37.83 \\
+      2769 & Eco‐GLOSA (No GLOSA)                & 46.03 & 40.03 & 33.33 & 27.57 & 23.03 & 18.90 & 14.67 & 11.10 &  7.37 &  3.60 &  0.00 \\
+      2769 & Eco‐GLOSA (With GLOSA)              & 0.00  &  4.43 &  8.40 & 11.77 & 15.33 & 18.67 & 22.50 & 25.87 & 29.30 & 32.30 & 37.83 \\
+      2769 & Baseline (Flow‐GLOSA) (all)         & 46.03 & 46.13 & 46.03 & 45.97 & 46.07 & 46.03 & 46.17 & 46.17 & 46.07 & 46.07 & 46.13 \\
+      2769 & Baseline (Flow‐GLOSA) (No GLOSA)    & 46.03 & 41.57 & 36.83 & 32.20 & 27.73 & 23.03 & 18.40 & 13.87 &  9.23 &  4.53 &  0.00 \\
+      2769 & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00  &  4.57 &  9.20 & 13.77 & 18.33 & 23.00 & 27.77 & 32.30 & 36.83 & 41.53 & 46.13 \\
+      \midrule
+      3462 & Eco‐GLOSA (all)                     & 49.03 & 44.07 & 41.33 & 39.50 & 38.77 & 37.53 & 37.03 & 36.67 & 36.47 & 36.33 & 36.17 \\
+      3462 & Eco‐GLOSA (No GLOSA)                & 49.03 & 39.67 & 33.13 & 27.73 & 23.57 & 18.73 & 14.67 & 10.87 &  7.50 &  3.63 &  0.00 \\
+      3462 & Eco‐GLOSA (With GLOSA)              & 0.00  &  4.40 &  8.20 & 11.77 & 15.20 & 18.80 & 22.37 & 25.80 & 28.97 & 32.70 & 36.17 \\
+      3462 & Baseline (Flow‐GLOSA) (all)         & 49.03 & 49.67 & 48.97 & 48.97 & 49.17 & 49.13 & 53.53 & 49.17 & 57.53 & 57.57 & 57.60 \\
+      3462 & Baseline (Flow‐GLOSA) (No GLOSA)    & 49.03 & 44.70 & 39.23 & 34.33 & 29.50 & 24.43 & 21.37 & 14.73 & 11.50 &  5.73 &  0.00 \\
+      3462 & Baseline (Flow‐GLOSA) (With GLOSA)  & 0.00  &  4.97 &  9.73 & 14.63 & 19.67 & 24.70 & 32.17 & 34.43 & 46.03 & 51.83 & 57.60 \\
+      \bottomrule
+    \end{tabular}%
+  }
 \end{table}
 
 \begin{table}[ht]
