--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,9 @@
 \documentclass[
-	language=en    ,
-	layout=twoside ,
-	titlepage=true ,
-	preamble=false ,
-	draftmode=false ,
+	language=en     ,
+	layout=twoside  ,
+	titlepage=true  ,
+	preamble=false  ,
+	draftmode=true ,
 ]{sbmthesis}
 \setlength\headheight{30pt} % required, do not delete
 
@@ -40,6 +40,8 @@
     \appendix
     
     \include{appendix/EmisLookupTable}
+    \cleardoublepage
+    
     \include{appendix/Results}
     \cleardoublepage
     
